# Test_CI

./: .gitignore  BUILD_PACKAGE.md  build.gradle.kts
.github/: CI_CD_SETUP.md
.github/workflows/: ci-cd.yml  java-ci.yml  origen-ci.yml  python-ci.yml
java/: Calculator.java  CalculatorTest.java  GRADLE_SETUP.md  JAVA_GRADLE_JDK21_SETUP.md  build.gradle.kts
java/src/main/java/: Calculator.java
java/src/test/java/: CalculatorTest.java
origen/: .gitignore  .rubocop.yml  Gemfile  README.md
origen/config/: application.rb  version.rb
origen/lib/: test_program.rb
origen/log/: last.txt  last.txt.old
origen/pattern/: example_pattern.rb  functional_test.rb
origen/spec/: pattern_spec.rb  spec_helper.rb
python/: MANIFEST.in  main.py  pyproject.toml  setup.py  test_main.py
python/stdf/: README.md  __init__.py  analyzer.py  cli.py  example.py  generator.py  parser.py  records.py  requirements.txt  test_stdf.py
