[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stdf-parser"
version = "1.0.0"
authors = [
    {name = "Lucas Wang", email = "lucas@example.com"}
]
description = "STDF parser for semiconductor test data analysis"
readme = "stdf/README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["stdf", "semiconductor", "test", "data", "ate", "parser"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]
analysis = [
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "numpy>=1.21.0",
]

[project.scripts]
stdf = "stdf.cli:main"

[project.urls]
Homepage = "https://github.com/Lucas-Wang-YL/Test_CI"
Repository = "https://github.com/Lucas-Wang-YL/Test_CI"
Issues = "https://github.com/Lucas-Wang-YL/Test_CI/issues"

[tool.setuptools]
packages = ["stdf"]

[tool.setuptools.package-data]
stdf = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["stdf"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=stdf --cov-report=term-missing"

[tool.coverage.run]
source = ["stdf"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
